--- a/galeria.html
+++ b/galeria.html
@@ -33,27 +33,27 @@
         
         <div class="galeria-grid">
             <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Paris" alt="Paris, França" loading="lazy">
+                <img src="france.png" alt="Paris, França" loading="lazy">
                 <p>A Cidade Luz (5 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Bali" alt="Bali, Indonésia" loading="lazy">
+                <img src="indo.png" alt="Bali, Indonésia" loading="lazy">
                 <p>Relaxamento em Bali (7 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Kyoto" alt="Kyoto, Japão" loading="lazy">
+                <img src="kyoto.png" alt="Kyoto, Japão" loading="lazy">
                 <p>Cultura em Kyoto (10 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil" loading="lazy">
-                <p>Sol e Samba no Rio (4 dias)</p>
+                <img src="brasil.png" alt="Rio de Janeiro, Brasil" loading="lazy">
+                <p>Rio de Janeiro, Brasil (4 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Egito" alt="Pirâmides do Egito" loading="lazy">
-                <p>Mistérios do Nilo (8 dias)</p>
+                <img src="pira.png" alt="Pirâmides do Egito" loading="lazy">
+                <p>Pirâmides do Egito (8 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Alaska" alt="Aurora Boreal no Alasca" loading="lazy">
+                <img src="aurora.png" alt="Aurora Boreal no Alasca" loading="lazy">
                 <p>Aurora Boreal (6 dias)</p>
             </div>
         </div>
