--- a/servicos.html
+++ b/servicos.html
@@ -42,7 +42,7 @@
 
         <div class="pacote-list" id="pacote-list">
             <div class="pacote-card">
-                <img src="imagens/bali.jpg" alt="Viagem para Bali">
+                <img src="bali.png" alt="Viagem para Bali">
                 <div class="pacote-info">
                     <h3>Bali</h3>
                     <p>7 dias de relaxamento e cultura.</p>
@@ -52,7 +52,7 @@
             </div>
 
             <div class="pacote-card">
-                <img src="imagens/paris.jpg" alt="Viagem para Paris">
+                <img src="paris.png" alt="Viagem para Paris">
                 <div class="pacote-info">
                     <h3>Paris</h3>
                     <p>Romance e história em 5 dias.</p>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="pacote-card">
-                <img src="imagens/nova-iorque.jpg" alt="Viagem para Nova Iorque">
+                <img src="ny.png" alt="Viagem para Nova Iorque">
                 <div class="pacote-info">
                     <h3>Nova Iorque</h3>
                     <p>A cidade que nunca dorme.</p>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="pacote-card">
-                <img src="imagens/porto.jpg" alt="Viagem para Porto">
+                <img src="porto.png" alt="Viagem para Porto">
                 <div class="pacote-info">
                     <h3>Porto</h3>
                     <p>Escapada de fim de semana na Invicta.</p>
