--- a/galeria.html
+++ b/galeria.html
@@ -34,15 +34,15 @@
         <div class="galeria-grid">
             <div class="galeria-item">
                 <img src="france.png" alt="Paris, França" loading="lazy">
-                <p>A Cidade Luz (5 dias)</p>
+                <p>Paris, França (5 dias)</p>
             </div>
              <div class="galeria-item">
                 <img src="indo.png" alt="Bali, Indonésia" loading="lazy">
-                <p>Relaxamento em Bali (7 dias)</p>
+                <p>Bali, Indonésia (7 dias)</p>
             </div>
              <div class="galeria-item">
                 <img src="kyoto.png" alt="Kyoto, Japão" loading="lazy">
-                <p>Cultura em Kyoto (10 dias)</p>
+                <p>Kyoto, Japão (10 dias)</p>
             </div>
              <div class="galeria-item">
                 <img src="brasil.png" alt="Rio de Janeiro, Brasil" loading="lazy">
@@ -54,7 +54,7 @@
             </div>
              <div class="galeria-item">
                 <img src="aurora.png" alt="Aurora Boreal no Alasca" loading="lazy">
-                <p>Aurora Boreal (6 dias)</p>
+                <p>Aurora Boreal no Alasca (6 dias)</p>
             </div>
         </div>
     </section>
