--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
        
         <div class="pacote-list home-teaser-grid">
             <div class="pacote-card">
-                <img src="https://via.placeholder.com/300x200/4A3B95/FFFFFF?text=Grécia" alt="Ilhas Gregas" loading="lazy">
+                <img src="greece.png" alt="Ilhas Gregas" loading="lazy">
                 <div class="pacote-info">
                     <h3>Atenas & Ilhas Gregas</h3>
                     <p>8 dias de história e praias paradisíacas.</p>
@@ -71,7 +71,7 @@
                 </div>
             </div>
              <div class="pacote-card">
-                <img src="https://via.placeholder.com/300x200/4A3B95/FFFFFF?text=Tailândia" alt="Templos Tailândia" loading="lazy">
+                <img src="tai.png" alt="Templos Tailândia" loading="lazy">
                 <div class="pacote-info">
                     <h3>Aventuras na Tailândia</h3>
                     <p>15 dias de cultura, mercados e selvas.</p>
