--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactos | Atlas  Viagens </title>
+    <title>Contactos | Atlas Viagens</title>
     <meta name="description" content="Entre em contacto para começar a planear a sua viagem.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -27,19 +27,25 @@
     </div>
     </header>
 
-    <section id="contacto" class="contacto container">
-        <h2>Fale Connosco</h2>
-        <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos.</p>
-        
-        <p style="margin-top: 20px;"><br>Email: info@atlasviagens.pt | Telefone: +351 987 654 321</p>
+    <section class="contact-header">
+        <div class="container">
+            <h2>Fale Connosco</h2>
+            <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos.</p>
+        </div>
+    </section>
 
-        <form action="#" method="POST">
-            <input type="text" name="nome" placeholder="Nome" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="text" name="assunto" placeholder="Assunto" required>
-            <textarea name="mensagem" placeholder="Mensagem" required></textarea>
-            <button type="submit" class="cta-button">Enviar</button>
-        </form>
+    <section id="contacto" class="contact-body">
+        <div class="container">
+            <p>Email: info@atlasviagens.pt | Telefone: +351 987 654 321</p>
+
+            <form action="#" method="POST">
+                <input type="text" name="nome" placeholder="Nome" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="text" name="assunto" placeholder="Assunto" required>
+                <textarea name="mensagem" placeholder="Mensagem" required></textarea>
+                <button type="submit" class="cta-button">Enviar</button>
+            </form>
+        </div>
     </section>
 
     <footer class="rich-footer">
@@ -47,7 +53,6 @@
             <div class="social-links"> 
                 <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                
             </div>
             <div class="text-xs">
                 <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
