--- a/sobre.html
+++ b/sobre.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós | Atlas Viagens</title> 
-    <meta name="description" content="Conheça a nossa agência, o nosso processo de planeamento de viagens de 4 passos, FAQ e a equipa de especialistas."> 
+    <title> Início | Atlas Viagens</title>
+    <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Pacote Advanced.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -27,76 +27,86 @@
         </div>
     </header>
 
-    <section id="sobre" class="institucional container">
-        <h2>A Nossa História</h2>
-        <p>Somos a Atlas Digital, uma agência nascida da paixão por explorar o mundo e pela tecnologia. Combinamos a experiência de viagens com soluções digitais de ponta para oferecer a si a melhor jornada, desde a reserva até ao destino.</p>
-        
-        <h3>O Nosso Propósito</h3>
-        <p>Acreditamos que cada viagem deve ser única, personalizada e sem complicações. É por isso que o nosso design é sempre intuitivo e funcional, focando-nos em garantir uma experiência de utilizador fluida.</p>
-        
-        <div style="margin-top: 40px;">
-            <h3>Visão & Valores</h3>
-            <p><strong>Visão:</strong> Ser a agência de viagens digital de referência no mercado português.</p>
-            <p><strong>Valores:</strong> Transparência, Aventura, Inovação e Sustentabilidade.</p>
-        </div>
+    <section id="home" class="hero">
+        <h1>A Sua Próxima Aventura Começa Aqui.</h1>
+        <h3>Do Sonho à Realidade, Sem Complicações</h3> 
+        <a href="servicos.html" class="cta-button">Ver Pacotes</a>
     </section>
 
-    <section id="processo" class="processo-viagem container">
-        <h2>O Nosso Processo em 4 Passos</h2>
-        <div class="processo-grid">
-            <div class="processo-step">
-                <i class="fas fa-search icon-lg"></i>
-                <h3>1. Explorar</h3>
-                <p>Use a nossa busca avançada para encontrar pacotes.</p>
+    <section id="features" class="features container">
+        <h2>Porquê Viajar com a Atlas Viagens?</h2>
+        <div class="feature-grid">
+            <div class="feature-card">
+                <i class="fas fa-magic icon-lg"></i>
+                <h3>Personalização</h3>
+                <p>Itinerários criados à sua medida, com consultoria dedicada e sem surpresas.</p>
             </div>
-            <div class="processo-step">
-                <i class="fas fa-comments icon-lg"></i>
-                <h3>2. Consultoria</h3>
-                <p>Ajuste o itinerário com o nosso especialista.</p>
+            <div class="feature-card">
+                <i class="fas fa-handshake icon-lg"></i>
+                <h3>Preço & Confiança</h3>
+                <p>Garantia dos melhores preços e transparência total, sem taxas escondidas.</p>
             </div>
-            <div class="processo-step">
-                <i class="fas fa-check-circle icon-lg"></i>
-                <h3>3. Confirmação</h3>
-                <p>Reserve e pague de forma segura.</p>
-            </div>
-            <div class="processo-step">
-                <i class="fas fa-plane-departure icon-lg"></i>
-                <h3>4. Suporte</h3>
-                <p>Oferecemos suporte 24/7 em todo o mundo.</p>
+            <div class="feature-card">
+                <i class="fas fa-headset icon-lg"></i>
+                <h3>Suporte 24/7</h3>
+                <p>Apoio constante antes, durante e após a sua viagem, em qualquer fuso horário.</p>
             </div>
         </div>
     </section>
 
-    <section id="faq" class="faq container">
-        <h2>Perguntas Frequentes</h2>
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false">Quais são as opções de pagamento?</button>
-            <div class="faq-answer hidden">
-                <p>Aceitamos Multibanco, MB WAY, Transferência Bancária e Cartões de Crédito.</p>
+    <section id="pacotes-home" class="pacotes-home container">
+        <h2>Os Mais Vendidos do Mês</h2>
+        <div class="pacote-list home-teaser-grid">
+            <div class="pacote-card">
+                <img src="greece.png" alt="Ilhas Gregas" loading="lazy">
+                <div class="pacote-info">
+                    <h3>Atenas & Ilhas Gregas</h3>
+                    <p>8 dias de história e praias paradisíacas.</p>
+                    <div class="price">€1250</div>
+                    <a href="servicos.html" class="cta-button">Ver Detalhes</a>
+                </div>
+            </div>
+             <div class="pacote-card">
+                <img src="tai.png" alt="Templos Tailândia" loading="lazy">
+                <div class="pacote-info">
+                    <h3>Aventuras na Tailândia</h3>
+                    <p>15 dias de cultura, mercados e selvas.</p>
+                    <div class="price">€1799</div>
+                    <a href="servicos.html" class="cta-button">Ver Detalhes</a>
+                </div>
             </div>
         </div>
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false">Os pacotes incluem seguro de viagem?</button>
-            <div class="faq-answer hidden">
-                <p>Todos os nossos pacotes Advanced incluem uma cobertura base de seguro.</p>
+        <a href="servicos.html" class="cta-button btn-margin-top">Ver Todos os Pacotes</a>
+    </section>
+
+    <section id="testemunhos" class="testemunhos-slider container">
+        <h2 class="section-title-margin">O que os Nossos Clientes Dizem</h2>
+        <div class="testemunhos-grid">
+            <div class="testemunho-card">
+                <blockquote>"A melhor experiência de planeamento que já tive. O suporte 24/7 foi fundamental."</blockquote>
+                <p class="author">- Ana P., Nova Iorque</p>
+            </div>
+            <div class="testemunho-card">
+                <blockquote>"Tudo impecável! Os hotéis sugeridos eram fantásticos e o roteiro muito bem pensado."</blockquote>
+                <p class="author">- João M., Lisboa</p>
+            </div>
+            <div class="testemunho-card">
+                <blockquote>"Viagem de sonho sem preocupações. A equipa tratou de todos os detalhes. Recomendo!"</blockquote>
+                <p class="author">- Carlos R., Porto</p>
             </div>
         </div>
-        <div class="faq-item">
-            <button class="faq-question" aria-expanded="false">Posso cancelar a minha reserva?</button>
-            <div class="faq-answer hidden">
-                <p>Sim, a política varia consoante o pacote. Consulte os nossos termos.</p>
-            </div>
-        </div>
+        <a href="contacto.html" class="cta-button secondary-cta">Comece a Sua Viagem</a>
     </section>
 
     <footer class="rich-footer">
         <div class="container text-center"> 
             <div class="social-links"> 
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
             </div>
             <div class="text-xs">
-                <p>&copy; 2025 Atlas Viagens. Website desenvolvido por Nadia Irina.</p>
+                <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
+                <p>Website desenvolvido por <a href="https://nadiairina.github.io/Nadia-Portfolio/" target="_blank" class="developer-link">Nadia Irina.</a></p>
             </div>
         </div>
     </footer>
