--- a/servicos.html
+++ b/servicos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacotes | Atlas Viagens</title>
+    <meta name="description" content="Explore todos os pacotes de viagem disponíveis.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -13,24 +14,43 @@
         <a href="index.html" class="logo-link">
             <img src="atlas.png" alt="Atlas Viagens Logo" class="logo-img">
         </a>
+        
         <nav>
             <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
             <a href="servicos.html" class="active">Pacotes</a>
             <a href="galeria.html">Galeria</a>
-            <a href="contacto.html" class="btn-contacto">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
+
+        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
 
+    <section id="servicos-banner" class="institucional" style="background-image: url('banner-pacotes.jpg');">
+        <div class="banner-content">
+            <h1>Os Nossos Pacotes</h1>
+        </div>
+    </section>
+
     <section class="pacotes container">
-        <h2 class="text-center">Os Nossos Pacotes</h2>
-        
-        <div class="pacote-list" id="pacote-list"></div>
+        <div class="search-bar" style="margin-top: 40px;">
+            <input type="text" id="search-input" placeholder="Pesquisar destino..." oninput="handleSearch()">
+            <select id="filter-price" onchange="filtrarPacotes()">
+                <option value="todos">Todos os preços</option>
+                <option value="baixo">Até €1000</option>
+                <option value="alto">Mais de €1000</option>
+            </select>
+        </div>
+
+        <div class="pacote-list" id="pacote-list">
+            </div>
 
         <div class="cta-contatos-section text-center">
             <h3>Deseja um roteiro personalizado?</h3>
             <p>Fale connosco e planeamos a viagem dos seus sonhos.</p>
-            <a href="contacto.html" class="cta-button">Ir para Contactos</a>
+            <a href="contacto.html" class="cta-button">Falar com um Especialista</a>
         </div>
     </section>
 
@@ -43,8 +63,19 @@
     </div>
 
     <footer class="rich-footer">
-        <div class="container text-center">
-            <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
+        <div class="container text-center"> 
+            <div class="social-links"> 
+                <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            </div>
+            <div class="text-xs">
+                <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" target="_blank" class="developer-link">
+                        Nadia Irina.
+                    </a>
+                </p>
+            </div>
         </div>
     </footer>
 
