--- a/servicos.html
+++ b/servicos.html
@@ -29,23 +29,23 @@
     </header>
 
     <section id="servicos-banner" class="institucional" style="background-image: url('banner-pacotes.jpg');">
-        <div class="banner-content">
-            <h1>Os Nossos Pacotes</h1>
-        </div>
-    </section>
+    <div class="banner-content">
+        <h1 style="color: white; text-shadow: 2px 2px 10px rgba(0,0,0,0.6);">Os Nossos Pacotes</h1>
+    </div>
+</section>
 
-    <section class="pacotes container">
-        <div class="search-bar" style="margin-top: 40px;">
-            <input type="text" id="search-input" placeholder="Pesquisar destino..." oninput="handleSearch()">
-            <select id="filter-price" onchange="filtrarPacotes()">
-                <option value="todos">Todos os preços</option>
-                <option value="baixo">Até €1000</option>
-                <option value="alto">Mais de €1000</option>
-            </select>
-        </div>
+<section class="pacotes container">
+    <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Pesquisar destino..." oninput="handleSearch()">
+        <select id="filter-price" onchange="filtrarPacotes()">
+            <option value="todos">Todos os preços</option>
+            <option value="baixo">Até €1000</option>
+            <option value="alto">Mais de €1000</option>
+        </select>
+    </div>
 
-        <div class="pacote-list" id="pacote-list">
-            </div>
+    <div class="pacote-list" id="pacote-list"></div>
+</section>
 
         <div class="cta-contatos-section text-center">
             <h3>Deseja um roteiro personalizado?</h3>
