--- a/servicos.html
+++ b/servicos.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacotes | Atlas Viagens</title>
-    <meta name="description" content="Explore todos os pacotes de viagem disponíveis.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -14,7 +13,6 @@
         <a href="index.html" class="logo-link">
             <img src="atlas.png" alt="Atlas Viagens Logo" class="logo-img">
         </a>
-        
         <nav>
             <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
@@ -22,60 +20,47 @@
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html">Contacto</a>
         </nav>
-
-        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">
+        <div class="right-icon" id="menu-toggle">
             <i class="fas fa-bars"></i>
         </div>
     </header>
 
     <section id="servicos-banner" class="institucional" style="background-image: url('banner-pacotes.jpg');">
-    <div class="banner-content">
-        <h1 style="color: white; text-shadow: 2px 2px 10px rgba(0,0,0,0.6);">Os Nossos Pacotes</h1>
-    </div>
-</section>
+        <div class="banner-content">
+            <h1 style="color: white; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); margin: 0;">Os Nossos Pacotes</h1>
+        </div>
+    </section>
 
-<section class="pacotes container">
-    <div class="search-bar">
-        <input type="text" id="search-input" placeholder="Pesquisar destino..." oninput="handleSearch()">
-        <select id="filter-price" onchange="filtrarPacotes()">
-            <option value="todos">Todos os preços</option>
-            <option value="baixo">Até €1000</option>
-            <option value="alto">Mais de €1000</option>
-        </select>
-    </div>
+    <section class="container">
+        <div class="search-bar">
+            <input type="text" id="search-input" placeholder="Pesquisar destino..." oninput="handleSearch()" style="padding: 10px; width: 250px;">
+            <select id="filter-price" onchange="filtrarPacotes()" style="padding: 10px;">
+                <option value="todos">Todos os preços</option>
+                <option value="baixo">Até €1000</option>
+                <option value="alto">Mais de €1000</option>
+            </select>
+        </div>
 
-    <div class="pacote-list" id="pacote-list"></div>
-</section>
+        <div class="pacote-list" id="pacote-list">
+            </div>
 
-        <div class="cta-contatos-section text-center">
+        <div class="cta-contatos-section text-center" style="margin: 80px 0; padding: 50px; background: #fdfdfd; border-radius: 20px; border: 1px solid #eee;">
             <h3>Deseja um roteiro personalizado?</h3>
             <p>Fale connosco e planeamos a viagem dos seus sonhos.</p>
-            <a href="contacto.html" class="cta-button">Falar com um Especialista</a>
+            <a href="contacto.html" class="cta-button" style="display: inline-block; margin-top: 20px;">Ir para Contactos</a>
         </div>
     </section>
 
     <div id="modal-detalhes" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
-            <div id="modal-body">
-                </div>
+            <div id="modal-body"></div>
         </div>
     </div>
 
     <footer class="rich-footer">
-        <div class="container text-center"> 
-            <div class="social-links"> 
-                <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            </div>
-            <div class="text-xs">
-                <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
-                <p class="mt-1">Website desenvolvido por 
-                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" target="_blank" class="developer-link">
-                        Nadia Irina.
-                    </a>
-                </p>
-            </div>
+        <div class="container text-center">
+            <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
         </div>
     </footer>
 
