--- a/servicos.html
+++ b/servicos.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <section id="servicos-banner" class="institucional" style="background-image: url('banner-pacotes.jpg');">
+    <section id="servicos-banner" class="institucional" style="background-image: url('ny.png');">
         <div class="banner-content">
             <h1 style="color: white; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); margin: 0;">Os Nossos Pacotes</h1>
         </div>
