--- a/galeria.html
+++ b/galeria.html
@@ -49,7 +49,7 @@
                     <div class="galeria-caption">
                         <h3>Paris, França</h3>
                         <p>A cidade das luzes em 5 dias inesquecíveis.</p>
-                        <a href="#" class="secondary-cta small-button">Saber Mais</a>
+                        <a href="contacto.html" class="secondary-cta small-button">Saber Mais</a>
                     </div>
                 </div>
 
@@ -63,7 +63,7 @@
                     <div class="galeria-caption">
                         <h3>Bali, Indonésia</h3>
                         <p>Relaxamento, templos e arrozais em 7 dias.</p>
-                        <a href="#" class="secondary-cta small-button">Saber Mais</a>
+                        <a href="contacto.html" class="secondary-cta small-button">Saber Mais</a>
                     </div>
                 </div>
 
@@ -77,7 +77,7 @@
                     <div class="galeria-caption">
                         <h3>Kyoto, Japão</h3>
                         <p>Tradição e modernidade em 10 dias.</p>
-                        <a href="#" class="secondary-cta small-button">Saber Mais</a>
+                        <a href="contacto.html" class="secondary-cta small-button">Saber Mais</a>
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                     <div class="galeria-caption">
                         <h3>Rio de Janeiro, Brasil</h3>
                         <p>Aventura e praias brasileiras em 4 dias.</p>
-                        <a href="#" class="secondary-cta small-button">Saber Mais</a>
+                        <a href="contacto.html" class="secondary-cta small-button">Saber Mais</a>
                     </div>
                 </div>
 
@@ -105,7 +105,7 @@
                     <div class="galeria-caption">
                         <h3>Egito Antigo</h3>
                         <p>Cruzeiro no Nilo e Pirâmides em 8 dias.</p>
-                        <a href="#" class="secondary-cta small-button">Saber Mais</a>
+                        <a href="contacto.html" class="secondary-cta small-button">Saber Mais</a>
                     </div>
                 </div>
 
@@ -119,7 +119,7 @@
                     <div class="galeria-caption">
                         <h3>Aurora Boreal</h3>
                         <p>6 dias em busca das luzes do norte.</p>
-                        <a href="#" class="secondary-cta small-button">Saber Mais</a>
+                        <a href="contacto.html" class="secondary-cta small-button">Saber Mais</a>
                     </div>
                 </div>
             </div>
