--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="testemunho-card">
                 <blockquote>"Viagem de sonho sem preocupações. A equipa tratou de todos os detalhes. Recomendo!"</blockquote>
-                <p class="author">- Carlos R., Porto</p>
+                <p class="author">- Rui P., Porto</p>
             </div>
         </div>
 
