--- a/servicos.html
+++ b/servicos.html
@@ -59,8 +59,22 @@
     </div>
 
     <footer class="rich-footer">
-        <div class="container text-center">
-            <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
+        <div class="container text-center"> 
+            <div class="social-links"> 
+                <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                
+            </div>
+            <div class="text-xs">
+                <p>&copy; 2025 Atlas Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        Nadia Irina.
+                    </a>
+                </p>
+            </div>
         </div>
     </footer>
 
