--- a/sobre.html
+++ b/sobre.html
@@ -34,7 +34,7 @@
 <section class="manifesto-section">
     <div class="manifesto-content">
         <p>
-            "Na Atlas Digital, unimos a paixão por explorar o mundo à inovação tecnológica para criar viagens únicas e sem complicações. 
+            "Na Atlas Viagens, unimos a paixão por explorar o mundo à inovação tecnológica para criar viagens únicas e sem complicações. 
             Especialistas em turismo, Marketing e Desenvolvimento, focamo-nos em oferecer uma experiência digital intuitiva e sustentável, 
             garantindo que a sua jornada seja memorável desde a reserva até ao destino. Movidos pela transparência e pela aventura, 
             somos a sua ponte entre o digital e as melhores culturas locais."
