--- a/sobre.html
+++ b/sobre.html
@@ -34,10 +34,9 @@
 <section class="manifesto-section">
     <div class="manifesto-content">
         <p>
-            "Na Atlas Viagens, unimos a paixão por explorar o mundo à inovação tecnológica para criar viagens únicas e sem complicações. 
-            Especialistas em turismo, Marketing e Desenvolvimento, focamo-nos em oferecer uma experiência digital intuitiva e sustentável, 
-            garantindo que a sua jornada seja memorável desde a reserva até ao destino. Movidos pela transparência e pela aventura, 
-            somos a sua ponte entre o digital e as melhores culturas locais."
+            "Na Atlas Viagens, unimos a paixão por explorar o mundo ao cuidado em cada detalhe para criar viagens únicas e autênticas. Como especialistas no setor do turismo, o nosso foco é proporcionar uma experiência simples, fluida e consciente, garantindo que a sua jornada seja memorável desde o primeiro contacto até ao regresso a casa.
+
+Movidos pela transparência e pelo espírito de aventura, somos o elo de ligação entre os seus sonhos e a riqueza das culturas locais. O nosso objetivo é que se sinta acompanhado e seguro, permitindo que a sua única preocupação seja desfrutar da beleza de cada destino."
         </p>
     </div>
 </section>
