--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
         </div>
     </header>
 
-    <section id="home" class="hero">
-        <h1>A Sua Próxima Aventura Começa Aqui.</h1>
-        <h3>Do Sonho à Realidade, Sem Complicações</h3> 
-        <a href="servicos.html" class="cta-button">Ver Pacotes</a>
-    </section>
+    <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('sua-imagem-fundo.jpg'); background-size: cover; height: 90vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white;">
+    <div class="hero-content">
+        <h1 style="color: white; font-size: 3.5rem; margin-bottom: 20px;">O mundo espera por si.</h1>
+        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px;">Desenhamos caminhos para que a sua única tarefa seja viver o momento e colecionar memórias em cada paragem.</p>
+        <a href="servicos.html" class="cta-button">Explorar Destinos</a>
+    </div>
+</section>
+
+<section id="sobre-breve" style="background-color: var(--accent-soft);">
+    <div class="container" style="max-width: 900px; text-align: center;">
+        <h2>A Sua Jornada, O Nosso Compromisso</h2>
+        <p>Na Atlas Viagens, unimos a paixão por explorar o mundo ao cuidado em cada detalhe para criar viagens únicas e autênticas. O nosso foco é proporcionar uma experiência simples e consciente, garantindo que a sua jornada seja memorável desde o primeiro contacto.</p>
+    </div>
+</section>
 
     <section id="features" class="features container">
         <h2>Porquê Viajar com a Atlas Viagens?</h2>
