--- a/sobre.html
+++ b/sobre.html
@@ -27,8 +27,14 @@
     </div>
     </header>
 
-   <section id="sobre" class="institucional container">
-    <h2>A Nossa História</h2>
+   <section class="institucional">
+    <div class="container">
+        <h1>A Nossa Essência</h1>
+        <p style="max-width: 800px; margin: 20px auto; font-size: 1.1rem;">
+            Movidos pela transparência e pelo espírito de aventura, somos o elo de ligação entre os seus sonhos e a riqueza das culturas locais. 
+            Não apenas organizamos viagens; cuidamos da sua ponte para o desconhecido, garantindo que cada destino seja sentido na sua forma mais pura.
+        </p>
+    </div>
 </section>
 
 <section class="manifesto-section">
