--- a/contacto.html
+++ b/contacto.html
@@ -32,6 +32,15 @@
         
     </section>
 
+    <div class="contacto-intro">
+    <h2>Vamos Planear a sua Próxima História?</h2>
+    <p>Diga-nos o que procura e um dos nossos especialistas ajudará a desenhar o seu itinerário.</p>
+</div>
+
+<label>Como gostaria de ser tratado?</label> <input type="text" name="nome" placeholder="O seu nome completo" required>
+
+<button type="submit" class="cta-button">Enviar Pedido de Inspiração</button>
+
     <section class="contact-section">
         <div class="contact-container">
             <div class="contact-info-column">
