--- a/servicos.html
+++ b/servicos.html
@@ -41,9 +41,8 @@
             </select>
         </div>
 
-        <div class="pacote-list" id="pacote-list">
-            </div>
-
+        <div id="pacotes-grid" class="pacotes-container">
+    </div>
         <div class="cta-contatos-section text-center" style="margin: 80px 0; padding: 50px; background: #fdfdfd; border-radius: 20px; border: 1px solid #eee;">
             <h3>Deseja um roteiro personalizado?</h3>
             <p>Fale connosco e planeamos a viagem dos seus sonhos.</p>
