--- a/sobre.html
+++ b/sobre.html
@@ -30,8 +30,7 @@
   <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('paris.png'); background-size: cover; background-position: center; height: 90vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white;">
     <div class="hero-content">
         <h1 style="color: white; font-size: 3.5rem; margin-bottom: 20px;">A Nossa Essência</h1>
-        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px;">Movidos pela transparência e pelo espírito de aventura, somos o elo de ligação entre os seus sonhos e a riqueza das culturas locais. 
-            Não apenas organizamos viagens; cuidamos da sua ponte para o desconhecido, garantindo que cada destino seja sentido na sua forma mais pura.
+        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px;">
 </p>
         <a href="servicos.html" class="cta-button">Explorar Destinos</a>
     </div>
