--- a/sobre.html
+++ b/sobre.html
@@ -39,9 +39,7 @@
 <section class="manifesto-section">
     <div class="manifesto-content">
         <p>
-            "Na Atlas Viagens, unimos a paixão por explorar o mundo ao cuidado em cada detalhe para criar viagens únicas e autênticas. Como especialistas no setor do turismo, o nosso foco é proporcionar uma experiência simples, fluida e consciente, garantindo que a sua jornada seja memorável desde o primeiro contacto até ao regresso a casa.
-
-Movidos pela transparência e pelo espírito de aventura, somos o elo de ligação entre os seus sonhos e a riqueza das culturas locais. O nosso objetivo é que se sinta acompanhado e seguro, permitindo que a sua única preocupação seja desfrutar da beleza de cada destino."
+            "A Atlas Viagens combina a paixão por explorar o mundo com um cuidado minucioso em cada detalhe para criar experiências autênticas. O foco da empresa é garantir uma jornada simples, segura e consciente, acompanhando o cliente desde o primeiro contacto até ao regresso. Através da transparência e do espírito de aventura, a agência liga os sonhos dos viajantes à riqueza das culturas locais. Assim, o objetivo principal é que o cliente desfrute do destino com total tranquilidade, sem preocupações logísticas."
         </p>
     </div>
 </section>
