--- a/servicos.html
+++ b/servicos.html
@@ -25,11 +25,16 @@
         </div>
     </header>
 
-    <section id="servicos-banner" class="institucional" style="background-image: url('ny.png');">
-        <div class="banner-content">
-            <h1 style="color: white; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); margin: 0;">Os Nossos Pacotes</h1>
-        </div>
-    </section>
+    <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('ny.png'); background-size: cover; background-position: center; height: 70vh; width: 100vw; display: flex; align-items: center; justify-content: center; text-align: center; color: white; margin: 0; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
+    <div class="hero-content" style="z-index: 2; position: relative;">
+        <h1 style="color: white; font-size: 3.5rem; margin-bottom: 10px; text-shadow: 2px 2px 15px rgba(0,0,0,0.6); font-weight: 700;">
+            Os Nossos Pacotes
+        </h1>
+        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto; text-shadow: 1px 1px 5px rgba(0,0,0,0.5); opacity: 0.9;">
+            Experiências exclusivas desenhadas para viajantes exigentes.
+        </p>
+    </div>
+</section>
 
     <section class="container">
         <div class="search-bar">
