--- a/galeria.html
+++ b/galeria.html
@@ -27,12 +27,16 @@
         </div> 
     </header>
 
-    <section class="gallery-header" style="padding: 60px 0 20px 0;">
-        <div class="container text-center">
-            <h1>Fragmentos de Sonhos</h1>
-            <p>Explore momentos capturados ao redor do mundo e deixe-se inspirar.</p>
-        </div>
-    </section>
+    <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.4)), url('france.png'); background-size: cover; background-position: center; height: 70vh; width: 100vw; display: flex; align-items: center; justify-content: center; text-align: center; color: white; margin: 0; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
+    <div class="hero-content" style="z-index: 2; position: relative;">
+        <h1 style="color: white; font-size: 3.5rem; margin-bottom: 10px; text-shadow: 2px 2px 15px rgba(0,0,0,0.6); font-weight: 700;">
+            Fragmentos de Sonhos
+        </h1>
+        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto; text-shadow: 1px 1px 8px rgba(0,0,0,0.5); opacity: 0.95;">
+            Explore momentos capturados ao redor do mundo e deixe-se inspirar.
+        </p>
+    </div>
+</section>
 
     <section class="galeria-body">
         <div class="container">
