--- a/galeria.html
+++ b/galeria.html
@@ -27,14 +27,10 @@
         </div> 
     </header>
 
-    <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.4)), url('backgal.png'); background-size: cover; background-position: center; height: 70vh; width: 100vw; display: flex; align-items: center; justify-content: center; text-align: center; color: white; margin: 0; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
-    <div class="hero-content" style="z-index: 2; position: relative;">
-        <h1 style="color: white; font-size: 3.5rem; margin-bottom: 10px; text-shadow: 2px 2px 15px rgba(0,0,0,0.6); font-weight: 700;">
-            Fragmentos de Sonhos
-        </h1>
-        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto; text-shadow: 1px 1px 8px rgba(0,0,0,0.5); opacity: 0.95;">
-            Explore momentos capturados ao redor do mundo e deixe-se inspirar.
-        </p>
+   <section id="hero" style="background-image: url('france.png');">
+    <div class="hero-content">
+        <h1 style="font-size: 3.5rem; font-weight: 700;">Fragmentos de Sonhos</h1>
+        <p style="font-size: 1.2rem;">Inspire-se com as nossas capturas pelo mundo.</p>
     </div>
 </section>
 
