--- a/contacto.html
+++ b/contacto.html
@@ -27,15 +27,10 @@
         </div>
     </header>
 
-   <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('form.png'); background-size: cover; background-position: center; height: 60vh; width: 100vw; display: flex; align-items: center; justify-content: center; text-align: center; color: white; margin: 0; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
-    <div class="hero-content" style="z-index: 2; position: relative; padding: 0 20px;">
-        <h1 style="color: white; font-size: 3.5rem; margin-bottom: 15px; text-shadow: 2px 4px 15px rgba(0,0,0,0.6); font-weight: 700;">
-            Vamos Planear a sua Próxima História?
-        </h1>
-        <div style="width: 80px; height: 4px; background: #FFC107; margin: 0 auto 20px; border-radius: 10px;"></div>
-        <p style="font-size: 1.3rem; max-width: 700px; margin: 0 auto; text-shadow: 1px 1px 8px rgba(0,0,0,0.5); opacity: 0.9;">
-            Diga-nos para onde quer ir e nós cuidamos de cada detalhe.
-        </p>
+   <section id="hero" style="background-image: url('porto.png');">
+    <div class="hero-content">
+        <h1 style="font-size: 3.5rem; font-weight: 700;">Fale Connosco</h1>
+        <p style="font-size: 1.2rem;">Vamos começar a planear a sua próxima história.</p>
     </div>
 </section>
 
