--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-   <section id="hero" style="background-image: url('porto.png');">
+   <section id="hero" style="background-image: url('form.png');">
     <div class="hero-content">
         <h1 style="font-size: 3.5rem; font-weight: 700;">Fale Connosco</h1>
         <p style="font-size: 1.2rem;">Vamos começar a planear a sua próxima história.</p>
