--- a/galeria.html
+++ b/galeria.html
@@ -27,7 +27,7 @@
         </div> 
     </header>
 
-   <section id="hero" style="background-image: url('france.png');">
+   <section id="hero" style="background-image: url('backgal.png');">
     <div class="hero-content">
         <h1 style="font-size: 3.5rem; font-weight: 700;">Fragmentos de Sonhos</h1>
         <p style="font-size: 1.2rem;">Inspire-se com as nossas capturas pelo mundo.</p>
