--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('ny.png'); background-size: cover; height: 90vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white;">
     <div class="hero-content">
         <h1 style="color: white; font-size: 3.5rem; margin-bottom: 20px;">O mundo espera por si.</h1>
-        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px;">Desenhamos caminhos para que a sua única tarefa seja viver o momento e colecionar memórias em cada paragem.</p>
+        <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px;">Desenhamos caminhos para que a sua única tarefa seja viver o momento.</p>
         <a href="servicos.html" class="cta-button">Explorar Destinos</a>
     </div>
 </section>
