--- a/servicos.html
+++ b/servicos.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <section id="hero" style="background-image: url('ny.png');">
+    <section id="hero" style="background-image: url('greecee.png');">
     <div class="hero-content">
         <h1 style="font-size: 3.5rem; font-weight: 700;">Os Nossos Pacotes</h1>
         <p style="font-size: 1.2rem;">Destinos exclusivos desenhados para si.</p>
