--- a/sobre.html
+++ b/sobre.html
@@ -27,7 +27,7 @@
     </div>
     </header>
 
-  <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('paris.png'); background-size: cover; background-position: center; height: 90vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white;">
+  <section id="hero" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('pariss.png'); background-size: cover; background-position: center; height: 90vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white;">
     <div class="hero-content">
         <h1 style="color: white; font-size: 3.5rem; margin-bottom: 20px;">A Nossa Essência</h1>
         <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px;">
